# grille-crypt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: arch_build.yaml  cppcheck.yaml
src/: AbstractCryptStream.cpp  AbstractCryptStream.h  AbstractRandomStream.h  AbstractSystemDependedFactory.cpp  AbstractSystemDependedFactory.h  Cli.cpp  Cli.h  DecryptStream.cpp  DecryptStream.h  EncryptStream.cpp  EncryptStream.h  FileFormatter.cpp  FileFormatter.h  FileValidator.cpp  FileValidator.h  GrilleCrypt.cpp  GrilleCrypt.h  GrilleKey.cpp  GrilleKey.h  KeyGenerator.cpp  KeyGenerator.h  LinuxFactory.cpp  LinuxFactory.h  LinuxFactoryBuilder.cpp  LinuxRandomStream.cpp  LinuxRandomStream.h  XorCrypt.cpp  XorCrypt.h  converter.cpp  converter.h  main.cpp
